--- a/02.md
+++ b/02.md
@@ -1,1 +1,24 @@
 
+How do you create a class - key word/casing/brackets?
+
+
+What is the difference between a variable and a constant?
+variable changes constant stays the same 
+
+What must you do after creating a variable?
+
+
+What does the word 'string' mean?
+
+
+What key work (abreviation) is used to create a function?
+
+
+What symbol means 'is of type'?
+
+
+What does 'Int' mean?
+
+
+How do you print out a variable or function in the debug area?
+
