--- a/03.md
+++ b/03.md
@@ -1,13 +1,19 @@
 
 What is the location framework called in iOS
+corelocation
 
 What are the two numbers that determine location
+longtitude and latitude 
 
 There are two keys you need to add to the info.plist in order to use gps of a device, what are they?
+privacy - location when in usage description
+privacy- location always and when in usage description
 
 Can you explain the role of the CLLocationManager delegate that we looked at?
+anytime theres a change in location information it tells view controller 
 
 How can you simulate location on the simulator?
+press location button on the debug area and mess with longtitude and latitude and change location
 
 How do you create a custom simulator for testing?
 
